--- a/calculator.css
+++ b/calculator.css
@@ -1,55 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Winky Sans", sans-serif;
-   }
-   body{
-    width:100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(45deg, #0a0a0a,#3a4452);
-   }
-   .calculator{
-         border: 1px solid grey;
-         padding: 20px;
-         border-radius: 16px;
-         background: transparent;
-         box-shadow: 0px 3px 15px rgba(red, green, blue, alpha);
-   }
-   input{
-    width: 320px;
-    border: none;
-    padding: 24px;
-    margin: 10px;
-    background: transparent;
-    box-shadow: 0px 3px 15px rgbs(84,84,84,0.1);
-    font-size: 40px;
-    text-align: right;
-    cursor: pointer;
-    color: aliceblue;
-   }
-   input::placeholder{
-    color: aliceblue;
-   }
-   button{
-    border: none;
-    width: 60px;
-    height: 60px;
-    margin: 10px;
-    border-radius: 50%;
-    background: transparent;
-    color: azure;
-    font-size: 20px;
-    box-shadow: -8px -8px 15px rgb(255,255,255,0.1);
-    cursor: pointer;
-   }
-.equalBtn{
-    background-color: orange;
-}
-.operator{
-    color: greenyellow;
-}
+<body>
+    <div class="calculator">
+        <input type="text" class="calculator-display" id="display" disabled>
+        <div class="calculator-buttons">
+            <button class="clear" onclick="clearDisplay()">C</button>
+            <button onclick="appendToDisplay('/')">/</button>
+            <button onclick="appendToDisplay('*')">*</button>
+            <button onclick="appendToDisplay('-')">-</button>
+            <button onclick="appendToDisplay('7')">7</button>
+            <button onclick="appendToDisplay('8')">8</button>
+            <button onclick="appendToDisplay('9')">9</button>
+            <button onclick="appendToDisplay('+')">+</button>
+            <button onclick="appendToDisplay('4')">4</button>
+            <button onclick="appendToDisplay('5')">5</button>
+            <button onclick="appendToDisplay('6')">6</button>
+            <button class="operator" onclick="appendToDisplay('(')">(</button>
+            <button onclick="appendToDisplay('1')">1</button>
+            <button onclick="appendToDisplay('2')">2</button>
+            <button onclick="appendToDisplay('3')">3</button>
+            <button class="operator" onclick="appendToDisplay(')')">)</button>
+            <button onclick="appendToDisplay('0')">0</button>
+            <button onclick="appendToDisplay('.')">.</button>
+            <button class="equal" onclick="calculate()">=</button>
+            <button onclick="backspace()">&#8592;</button>
+        </div>
+    </div>
